--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="page-header bg-primary text-white text-center p-3">
-      <span class="h4">Formulario de Mensajes</span>
+      <span class="h4">Formulario de Contactos</span>
     </div>
 
     <div class="container mt-5" style="max-width: 600px;">
